[Tutorial] Custom Stack - Updates Dependency section